apps/kubernetes-dashboard/networkpolicies/egress-kubernetes-dashboard.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  selector: app.kubernetes.io/instance == 'kubernetes-dashboard'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443  # kube api
