apps/kubernetes-dashboard/networkpolicies/ingress-kubernetes-dashboard.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  selector: app.kubernetes.io/instance == 'kubernetes-dashboard'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 8443  # regular ingress port
