apps/kubernetes-dashboard/networkpolicies/kubernetes-dashboard-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: kubernetes-dashboard-egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'kubernetes-dashboard'
        selector: app.kubernetes.io/instance == 'kubernetes-dashboard'
        ports:
          - 8443  # regular ingress port
