apps/kubernetes-dashboard/networkpolicies/kubernetes-dashboard.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes-dashboard
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
